# thermorbios953w

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
debian/: rules
examples/: Makefile.in  example.c  wsdclient.c
radlib-patch/: README  genpatch.sh  radlib-2.7.5.pat
radlib-patch/radlib-2.7.5-mods/src/: radconffile.c
src/: Makefile.am  Makefile.in  bw953.c  common.h  datadispcsv.c  datadispcsv.h  datadisplay.c  datadisplay.h  datahandlers.c  datahandlers.h  debug.c  debug.h  list.h  select.c  select.h  servers.c  servers.h  thermorwsd.c  thermorwsd.h  util.c
ws9xxd/: Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
ws9xxd/dists/linux/debian/ubuntu/etc/udev/rules.d/: 50-bw9xx.rules
ws9xxd/examples/: Makefile.am  Makefile.in  example.c  wsdclient.c
ws9xxd/src/: Makefile.am  Makefile.in  bw953.c  bw953.h  common.h  configfile.c  configfile.h  datadispcsv.c  datadispcsv.h  datadisplay.c  datadisplay.h  datahandlers.c  datahandlers.h  debug.c  debug.h  list.h  select.c  select.h  servers.c  servers.h  setoptions.c  setoptions.h  thermorwsd.c  thermorwsd.h  util.c
wview-4.0.1-patch/: Makefile.am  README  configure.in  createwview.sh  genpatch.sh
wview-4.0.1-patch/stations/: Makefile.am
wview-4.0.1-patch/stations/BW9xx/: bw9xx.c  bw9xx.h
wview-4.0.1-patch/wviewconfig/: Makefile.am  wviewconfig  wviewconfig.sh
wview-patch/: README  createwview.sh  genpatch.sh  makedist.sh  wview-4.0.1.pat
wview-patch/stations/BW9xx/: bw9xx.c  bw9xx.h
wview-patch/wview-4.0.1-mods/stations/BW9xx/: Makefile.am  bw9xx.c
wview-patches/wview-4.0.1-patch/: INSTALL  genpatch.sh  makedist.sh
wview-patches/wview-5.5.0-patch/: INSTALL  README  genpatch.sh  makedist.sh  wview-5.5.0.pat
wview-patches/wview-5.5.0-patch/wview-5.5.0-mods/: Makefile.am  configure.in
wview-patches/wview-5.5.0-patch/wview-5.5.0-mods/examples/conf/: wview-conf.sql
wview-patches/wview-5.5.0-patch/wview-5.5.0-mods/stations/: Makefile.am
wview-patches/wview-5.5.0-patch/wview-5.5.0-mods/stations/BW9xx/: Makefile.am  bw9xx.c  bw9xx.h
wview-patches/wview-5.5.0-patch/wview-5.5.0-mods/wviewconfig/: wviewconfig.sh
